<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wwecuador.onroad.MainActivity">

    <!-- La barra de Título -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.wwecuador.onroad.MainActivity"
        tools:showIn="@layout/app_bar_main">

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </com.mapbox.mapboxsdk.maps.MapView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="35dp"
            android:layout_height="45dp"
            android:background="#3399FF"
            android:text="A"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_alignTop="@+id/origen"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_marginTop="0dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="35dp"
            android:layout_height="45dp"
            android:layout_alignBottom="@+id/destino"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="14dp"
            android:background="#6633CC"
            android:text="B"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:gravity="center"/>

        <com.mapbox.services.android.ui.geocoder.GeocoderAutoCompleteView
            android:id="@+id/origen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="14dp"
            android:textColor="@color/text_default_material_dark_primary"
            android:textColorLink="@android:color/holo_blue_bright"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@color/text_default_material_dark_primary"
            android:background="@color/material_gray_850"
            android:elevation="12dp"
            android:hint="@string/origen"
            android:padding="10dp"
            android:singleLine="true"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="53dp" />

        <com.mapbox.services.android.ui.geocoder.GeocoderAutoCompleteView
            android:id="@+id/destino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_gray_850"
            android:elevation="12dp"
            android:textColor="@color/text_default_material_dark_primary"
            android:textColorLink="@android:color/holo_blue_bright"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@color/text_default_material_dark_primary"
            android:hint="@string/destino"
            android:padding="10dp"
            android:singleLine="true"
            android:layout_below="@+id/origen"
            android:layout_alignLeft="@+id/origen"
            android:layout_alignStart="@+id/origen"
            android:layout_alignRight="@+id/origen"
            android:layout_alignEnd="@+id/origen" />

    </RelativeLayout>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end|bottom"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        fab:menu_animationDelayPerItem="0"
        fab:menu_colorNormal="#43A047"
        fab:menu_colorPressed="#2E7D32"
        fab:menu_colorRipple="#1B5E20"
        fab:menu_labels_maxLines="2"
        fab:menu_labels_ellipsize="end">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:src="@drawable/ic_explore_white_24dp"
            fab:fab_label="@string/explorar"
            style="@style/MenuButtonsSmall.Green" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_location_white_24dp"
            fab:fab_label="@string/agregar_alerta"
            style="@style/MenuButtonsSmall.Green" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_my_location_24dp"
            fab:fab_label="@string/mostrar_ubicacion"
            style="@style/MenuButtonsSmall.Green" />

    </com.github.clans.fab.FloatingActionMenu>

    <!--- Floatin Icon
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/location_toggle_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_my_location_24dp"
        tools:ignore="VectorDrawableCompat"
        app:backgroundTint="@color/material_green_500"/> -->

</android.support.design.widget.CoordinatorLayout>

